--- a/AlgebraicConsructionOfQuasiSplitTorus.tex
+++ b/AlgebraicConsructionOfQuasiSplitTorus.tex
@@ -161,6 +161,19 @@ exhibiting a basis for such a field of invariants.  In concrete terms,
 we start from a subgroup of $\mathrm{GL}(n,\Z)$ and describe the field
 of functions of an associated torus.
 
+The Weil restriction is a functor such that for any field extension $K/F$ 
+and any affine group scheme, $G$ over $K$, produces an $F$-group scheme 
+$R_{K/F}(G)$. If $A $ is a $K$-algebra, then $R_{K/F}(G)(A) = G(A \otimes_F K)$
+ (see \cite[Section 1.3.12]{Voskresenskii}).
+
+An algebraic torus representable as a direct product of groups of the form 
+$R_{K/F}(\mathbb{G}_m)$ is called a quasi split torus. Such algebraic tori 
+are characterized by the condition that their corresponding $G$-lattice is 
+a permutation lattice.
+
+The constructive proof of the No Name Lemma, can be applied to get an expicit 
+transcendence basis of the rational function field of a quasi split algebraic torus.
+
 \begin{definition}\label{Assumption}
   Let $G$ be a finite subgroup of $\mathrm{GL}(n,\Z)$.  The
   $G$-lattice $L_G$ corresponding to $G$ is the rank $n$ lattice
